Update __log_qso.html permalink

--- a/__log_qso.html
+++ b/__log_qso.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: New QSO
-permalink: /__log_qso/
+permalink: /KF7HVM_log_qso/
 ---
 
 <h1>This form is for use by KF7HVM only.</h1>
