KF7HVM_log_qso: fix their call/location fields

--- a/KF7HVM_log_qso.html
+++ b/KF7HVM_log_qso.html
@@ -42,13 +42,13 @@ permalink: /KF7HVM_log_qso/
 
   <div class="textfield narrowfield">
     <label for="comment-form-t_call">Their Call
-      <input class="textfield__input" name="fields[t_call]" type="text" id="comment-form-t_call" value="KF7HVM" disabled required/>
+      <input class="textfield__input" name="fields[t_call]" type="text" id="comment-form-t_call" value="" required/>
     </label>
   </div>
 
   <div class="textfield narrowfield">
     <label for="comment-form-t_loc">Their Location
-      <input class="textfield__input" name="fields[t_loc]" type="text" id="comment-form-t_loc" value="Poplar" />
+      <input class="textfield__input" name="fields[t_loc]" type="text" id="comment-form-t_loc" value="" />
     </label>
   </div>
 
