--- a/KF7HVM_log_qso.html
+++ b/KF7HVM_log_qso.html
@@ -27,7 +27,7 @@ permalink: /KF7HVM_log_qso/
 
   <div class="textfield narrowfield">
     <label for="comment-form-frequency">Frequency
-      <input class="textfield__input" name="fields[frequency]" type="number" id="comment-form-frequency" required />
+      <input class="textfield__input" name="fields[frequency]" type="number" step="0.0001" id="comment-form-frequency" required />
     </label>
   </div>
 
@@ -54,13 +54,13 @@ permalink: /KF7HVM_log_qso/
 
   <div class="textfield">
     <label for="comment-form-comment">Public Comment
-      <textarea class="textfield__input" name="fields[comment]" type="text" id="comment-form-comment" placeholder="Public Comments" required rows="6"></textarea>
+      <textarea class="textfield__input" name="fields[comment]" id="comment-form-comment" placeholder="Public Comments" required rows="6"></textarea>
     </label>
   </div>
 
   <div class="textfield">
     <label for="comment-form-notes">Private Notes
-      <textarea class="textfield__input" name="fields[notes]" type="text" id="comment-form-notes" placeholder="Private Notes" required rows="6"></textarea>
+      <textarea class="textfield__input" name="fields[notes]" id="comment-form-notes" placeholder="Private Notes" required rows="6"></textarea>
     </label>
   </div>
 
