KF7HVM_log_qso: pass m_call
a disabled field apparently doesn't submit the value on POST

--- a/KF7HVM_log_qso.html
+++ b/KF7HVM_log_qso.html
@@ -15,7 +15,8 @@ permalink: /KF7HVM_log_qso/
 
   <div class="textfield narrowfield">
     <label for="comment-form-m_call">My Call
-      <input class="textfield__input" name="fields[m_call]" type="text" id="comment-form-m_call" value="KF7HVM" disabled required/>
+      <input class="textfield__input" type="text" id="comment-form-m_call" value="KF7HVM" disabled />
+      <input name="fields[m_call]" type="hidden" value="KF7HVM" />
     </label>
   </div>
 
