hello world react/webpack setup

--- a/qso.html
+++ b/qso.html
@@ -30,3 +30,5 @@ permalink: /qso/
   </tr>
 {% endfor %}
 </table>
+<div id="root"></div>
+<script async src="{{ '/assets/js/bundle.js' | relative_url }}"></script>
