weekly: link forward and backwards

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<a href="/weekly/">📰 Weekly Newsletter</a> - 
+<a href="/weekly/2022-01-16">📰 Weekly Newsletter</a> - 
 <a href="/calendar/">🗓 Cowlitz County Ham Calendar</a> - 
 <a href="/archive/">📌 All Posts</a>
 <div class="posts">
